--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-# Database
+# Database (PostgreSQL - Neon, Supabase, or your own)
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 
-# NextAuth
-NEXTAUTH_SECRET="your-secret-key-generate-with-openssl-rand-base64-32"
-NEXTAUTH_URL="http://localhost:3000"
+# NextAuth Configuration
+# Generate secret with: openssl rand -base64 32
+NEXTAUTH_SECRET="your-secret-key-here"
+# Use your domain in production (e.g., https://yourdomain.com)
+NEXTAUTH_URL="https://yourdomain.com"
+
+# Google OAuth (optional)
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
 
 # App Configuration
-NODE_ENV="development"
+NODE_ENV="production"
